--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link active" href="/about.html">About</a>
+                        <a class="nav-link" href="/about.html">About</a>
                     </li>
 
                     <li class="nav-item dropdown">
@@ -49,9 +49,9 @@
                             </li>
                         </ul>
                     </li>
-
+                    
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact Us</a>
+                        <a class="nav-link  active" href="/contact.html">Contact Us</a>
                     </li>
 
                 </ul>
